More styling changes

--- a/app/views/lessons/index.html.erb
+++ b/app/views/lessons/index.html.erb
@@ -1,5 +1,10 @@
 <div class="grid-x grid-margin-x matches-list">
-  <div class="large-offset-1 large-10 medium-offset-1 medium-10 small-12 cell">
+  <div class="cell medium-offset-1 medium-10 small-offset-1 small-10 cell">
+    <a class="button expanded success" href="/lessons/new" >Add a new lesson</a>
+  </div>
+</div>
+<div class="grid-x grid-margin-x matches-list">
+  <div class="medium-offset-1 medium-10 small-offset-1 small-10 cell">
     <table id="data-datatables">
       <thead>
       <tr>
