Still need to update migration but nearly done with post_match_notes

--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -51,6 +51,11 @@
           <textarea autocomplete="off" id="new-note-to-self" type="textarea" rows="4" name="new-note-to-self"></textarea>
         </label>
       </div>
+      <div class="cell medium-offset-1 medium-10 match-details small-offset-2 small-8">
+        <label class="match-label new-post-match-notes">Post Match Notes
+          <textarea autocomplete="off" id="new-post-match-notes" type="textarea" rows="4" name="new-post-match-notes"></textarea>
+        </label>
+      </div>
     </div>
   </div>
   <div class="grid-x grid-margin-x">
