--- a/app/views/matches/note_to_self.html.erb
+++ b/app/views/matches/note_to_self.html.erb
@@ -1,7 +1,7 @@
 <form class="grid-x grid-margin-x" autocomplete="off">
   <div class="cell medium-12">
     <div>
-      <label name="note-to-self">Notes to self</label>
+      <label name="note-to-self">Pre Match Notes</label>
       <textarea autocomplete="off" id="note-to-self" rows="4"><%= @note_to_self %></textarea>
     </div>
     <div>
