--- a/app/views/matches/new.html.erb
+++ b/app/views/matches/new.html.erb
@@ -1,12 +1,28 @@
 <form autocomplete="off">
   <div class="match-details" id="<%= @match.id %>">
     <div class="grid-x grid-margin-x">
-      <div class="cell medium-offset-1 medium-5 small-offset-2 small-8 ">
+      <fieldset class="match-label medium-offset-1 medium-11 small-offset-2 small-8 cell">
+        <legend>Please select singles or doubles</legend>
+        <input type="radio" name="singles_or_doubles" value="singles" id="singles" checked="checked" required><label class='match-label' for="singles">Singles</label>
+        <input type="radio" name="singles_or_doubles" value="doubles" id="doubles"><label class='match-label' for="doubles">Doubles</label>
+      </fieldset>
+
+      <div class="cell singles-view medium-offset-1 medium-6 small-offset-2 small-8 ">
         <label class="new-opponent match-label">Opponent
           <input id="new-opponent" type="text"name="new-opponent"/>
         </label>
       </div>
-      <div class="cell medium-offset-1 medium-4 small-offset-2 small-8">
+      <div class="doubles-view is-hidden  cell medium-offset-1 medium-3 small-offset-2 small-8 ">
+        <label class="new-opponent match-label">Opponent 1
+          <input id="new-opponent1" type="text"name="new-opponent1"/>
+        </label>
+      </div>
+      <div class="doubles-view is-hidden cell singles-view medium-offset-0 medium-3 small-offset-2 small-8 ">
+        <label class="new-opponent2 match-label">Opponent 2
+          <input id="new-opponent2" type="text"name="new-opponent2"/>
+        </label>
+      </div>
+      <div class="cell medium-offset-1 medium-3 small-offset-2 small-8">
         <label class="match-label new-date-and-time">Date
           <input id="new_match_datetime" type="text" name="datetime" placeholder="Please enter a date"/>
         </label>
@@ -65,6 +81,7 @@
   </div>
   </div>
   <input type="hidden" name="new_opponent_id" id="new_opponent_id"/>
+  <input type="hidden" name="new_opponent2_id" id="new_opponent2_id"/>
   <input type="hidden" name="new_location_id" id="new_location_id"/>
   <input type="hidden" name="new_strengths_ids" id="new_strengths_ids"/>
   <input type="hidden" name="new_weaknesses_ids" id="new_weaknesses_ids"/>
