--- a/app/views/matches/show.html.erb
+++ b/app/views/matches/show.html.erb
@@ -2,12 +2,28 @@
   <div class="match-details" id="<%= @match.id %>">
 
     <div class="grid-x grid-margin-x">
-      <div class="cell medium-offset-1 medium-5 small-offset-2 small-8">
-        <label class="match-label opponent">Opponent
-          <input class="opponent" type="text" name="opponent" value="<%= @match.opponent.name %>"/>
+      <fieldset class="match-label medium-offset-1 medium-11 small-offset-2 small-8 cell">
+        <legend>Please select singles or doubles</legend>
+        <input type="radio" name="singles_or_doubles" value="singles" id="singles" <%= @match.singles ? "checked=\"checked\"" : ""%> required><label class='match-label' for="singles">Singles</label>
+        <input type="radio" name="singles_or_doubles" value="doubles" id="doubles" <%= @match.doubles ? "checked=\"checked\"" : ""%> > <label class='match-label' for="doubles">Doubles</label>
+      </fieldset>
+
+      <div class="cell singles-view <%= @match.doubles ? "is-hidden" : ""%> medium-offset-1 medium-6 small-offset-2 small-8 ">
+        <label class="opponent match-label">Opponent
+          <input id="opponent" type="text"name="new-opponent" value="<%= @match.opponent ? @match.opponent.name : "" %>"/>
         </label>
       </div>
-      <div class="cell medium-offset-1 medium-4 small-offset-2 small-8">
+      <div class="doubles-view  <%= @match.singles ? "is-hidden" : ""%> cell medium-offset-1 medium-3 small-offset-2 small-8 ">
+        <label class="opponent match-label">Opponent 1
+          <input id="new-opponent1" type="text"name="new-opponent1" value="<%= @match.opponent ? @match.opponent.name : ""%>"/>
+        </label>
+      </div>
+      <div class="doubles-view <%= @match.singles ? "is-hidden" : ""%> cell singles-view medium-offset-0 medium-3 small-offset-2 small-8 ">
+        <label class="opponent2 match-label">Opponent 2
+          <input id="opponent2" type="text"name="new-opponent2" value="<%= @match.opponent2 ? @match.opponent2.name : "" %>"/>
+        </label>
+      </div>
+      <div class="cell medium-offset-1 medium-3 small-offset-2 small-8">
         <label class="match-label datetime">Date
         <input id="match_datetime" type="text" name="datetime" value="<%= @match.match_datetime ? @match.match_datetime.strftime('%Y-%m-%d %H:%M') : '' %>" placeholder="Please enter a date"/>
         </label>
